--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -125,11 +125,19 @@ jobs:
          mkdir -p ${RIPP} && cd ${RIPP}
          if [[ $envpriv=='true' ]]
          then
-           echo "${{ secrets.ENV }}" > .env
+           git clone $template
+           cd symfony-app-skeleton
+           cp .env ../
+           cd puplic
+           cp .htaccess ../../
+           cd ..
+           rm -rf symfony-app-skeleton
+           #echo "${{ secrets.ENV }}" > .env
            echo create .env
            sed -i "s|FORREPLACE123|$RIPP|g" .env
-           echo "${{ secrets.HTACCESS }}" > .htaccess
-            sed -i "s|FORREPLACE123|$RIPP|g" .htaccess
+           sed -i "s|keyphr|${{ secrets.PASS }}|g" .env
+           #echo "${{ secrets.HTACCESS }}" > .htaccess
+           sed -i "s|FORREPLACE123|$RIPP|g" .htaccess
            echo create .htaccess
            echo creating .env and .htaccess is done 
            echo 'FROM alpine:3.7' >> Dockerfile
@@ -140,6 +148,7 @@ jobs:
          openssl genpkey -out private.pem -aes256 -pass pass:${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
          openssl pkey -passin pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
          echo creating new jwt 
+      
          cd ..
          git add .
          
