--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -122,18 +122,27 @@ jobs:
          repository: yes-soft-de/environment-tools
          token: ${{ secrets.ENVGHTOKEN }}
       - run: |
+         echo 1
          mkdir -p ${RIPP} && cd ${RIPP}
          if [[ $envpriv=='true' ]]
          then
            git clone $TEMPLATE
+           echo 2
            cd symfony-app-skeleton
+           echo 3
            cp .env ../
+           echo 4
            cd puplic
+           echo 5
            cp .htaccess ../../
-           cd ..
+           echo 6
+           cd ../../
+           echo 7
            rm -rf symfony-app-skeleton
+           echo 8
            #echo "${{ secrets.ENV }}" > .env
            echo create .env
+           ls -al
            sed -i "s|FORREPLACE123|$RIPP|g" .env
            sed -i "s|keyphr|${{ secrets.PASS }}|g" .env
            #echo "${{ secrets.HTACCESS }}" > .htaccess
