--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -127,7 +127,7 @@ jobs:
          echo 1.1
          if [[ $envpriv=='true' ]]
          then
-           git clone ${TEMPLATE}
+           git clone https://github.com/${TEMPLATE}.git
            echo 2
            cd symfony-app-skeleton
            echo 3
