--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -127,7 +127,9 @@ jobs:
          echo 1.1
          if [[ $envpriv=='true' ]]
          then
-           git clone https://github.com/${{ env.TEMPLATE }}.git
+           temp=https://github.com/${{ env.TEMPLATE }}.git
+           echo $temp
+           git clone $temp
            echo 2
            cd symfony-app-skeleton
            echo 3
