--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -136,15 +136,16 @@ jobs:
            echo 2
            cd symfony-app-skeleton
            echo 3
-           cp .env ../
-           echo 4
-           cd puplic
-           echo 5
-           cp .htaccess ../../
-           echo 6
+           #cp .env ../
+           # echo 4
+           #cd puplic
+           #echo 5
+           #cp .htaccess ../../
+           #echo 6
            cd ../../
-           echo 7
+           #echo 7
            rm -rf symfony-app-skeleton
+           exit
            echo 8
            #echo "${{ secrets.ENV }}" > .env
            echo create .env
