--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -206,6 +206,7 @@ jobs:
          cd k8s
          kubectl apply -f namespace.yaml
          sed -i "s|123secret123|${{ secrets.ROOTPASSWORD }}|g" secret.yaml
+         sed -i "s|123secretuser123|${{ secrets.USERPASSWORD }}|g" secret.yaml
          kubectl apply -f secret.yaml
          kubectl apply -f configmap.yaml
          kubectl apply -f mysql.yaml
