--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -205,8 +205,8 @@ jobs:
          gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}
          cd k8s
          kubectl apply -f namespace.yaml
-         sed -i "s|123secret123|${{ secrets.ROOTPASSWORD }}|g" secret.yaml
-         sed -i "s|123secretuser123|${{ secrets.USERPASSWORD }}|g" secret.yaml
+         sed -i "s|123secret123|${{ secrets.SECPASS }}|g" secret.yaml
+         sed -i "s|123secretuser123|${{ secrets.SECPASS }}|g" secret.yaml
          kubectl apply -f secret.yaml
          kubectl apply -f configmap.yaml
          sed -i "s|REPLACEUserPassword|${{ secrets.USERPASSWORD }}|g" mysql.yaml
